# spectra

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE
src/: app.c  app.h  logger.c  main.c  types.h
